--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,10 @@
             android:exported="false"
             android:theme="@style/Theme.FlashcardCuoiKy" />
         <activity
+            android:name=".CreateSetActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FlashcardCuoiKy" />
+        <activity
             android:name=".GrammarDetailActivity"
             android:exported="false"
             android:theme="@style/Theme.FlashcardCuoiKy" />
